--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/router": "^11.0.0",
     "@auth0/angular-jwt": "^5.0.1",
+    "@kolkov/angular-editor": "^1.1.4",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.11.3"
