--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.0",
+    "@angular/animations": "^11.0.3",
     "@angular/cdk": "^11.0.1",
-    "@angular/common": "^11.0.0",
-    "@angular/compiler": "^11.0.0",
-    "@angular/core": "^11.0.0",
+    "@angular/common": "^11.0.3",
+    "@angular/compiler": "^11.0.3",
+    "@angular/core": "^11.0.3",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^11.0.0",
-    "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "^11.0.0",
-    "@angular/platform-browser-dynamic": "^11.0.0",
-    "@angular/router": "^11.0.0",
-    "@auth0/angular-jwt": "^5.0.1",
+    "@angular/forms": "^11.0.3",
+    "@angular/material": "^11.0.1",
+    "@angular/platform-browser": "^11.0.3",
+    "@angular/platform-browser-dynamic": "^11.0.3",
+    "@angular/router": "^11.0.3",
+    "@auth0/angular-jwt": "^5.0.2",
     "@kolkov/angular-editor": "^1.1.4",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
@@ -31,10 +31,10 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.3",
     "@angular/cli": "~11.0.3",
-    "@angular/compiler-cli": "^11.0.0",
-    "@types/jasmine": "~3.6.0",
+    "@angular/compiler-cli": "^11.0.3",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^14.14.7",
+    "@types/node": "^14.14.10",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
