--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "catalogo",
+  "name": "mzstore",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -16,7 +16,7 @@
     "@angular/common": "^11.0.4",
     "@angular/compiler": "^11.0.4",
     "@angular/core": "^11.0.4",
-    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "^11.0.4",
     "@angular/material": "^11.0.2",
     "@angular/platform-browser": "^11.0.4",
