--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^11.0.4",
     "@auth0/angular-jwt": "^5.0.2",
     "@kolkov/angular-editor": "^1.1.4",
+    "crypto-js": "^4.0.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.11.3"
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "~0.1100.4",
     "@angular/cli": "~11.0.4",
     "@angular/compiler-cli": "^11.0.4",
+    "@types/crypto-js": "^4.0.1",
     "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.14.10",
