--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.3",
+    "@angular/animations": "^12.0.1",
     "@angular/cdk": "^11.2.2",
-    "@angular/common": "^11.2.3",
-    "@angular/compiler": "^11.2.3",
-    "@angular/core": "^11.2.3",
+    "@angular/common": "^12.0.1",
+    "@angular/compiler": "^12.0.1",
+    "@angular/core": "^12.0.1",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "^11.2.3",
+    "@angular/forms": "^12.0.1",
     "@angular/material": "^11.2.2",
-    "@angular/platform-browser": "^11.2.3",
-    "@angular/platform-browser-dynamic": "^11.2.3",
-    "@angular/router": "^11.2.3",
+    "@angular/platform-browser": "^12.0.1",
+    "@angular/platform-browser-dynamic": "^12.0.1",
+    "@angular/router": "^12.0.1",
     "@auth0/angular-jwt": "^5.0.2",
     "@kolkov/angular-editor": "^1.1.4",
     "crypto-js": "^4.0.0",
@@ -29,12 +29,12 @@
     "ngx-infinite-scroll": "^10.0.1",
     "rxjs": "~6.6.6",
     "tslib": "^2.0.0",
-    "zone.js": "^0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.2",
-    "@angular/cli": "~11.2.2",
-    "@angular/compiler-cli": "^11.2.3",
+    "@angular-devkit/build-angular": "~12.0.1",
+    "@angular/cli": "~12.0.1",
+    "@angular/compiler-cli": "^12.0.1",
     "@types/crypto-js": "^4.0.1",
     "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "~2.0.3",
@@ -42,7 +42,7 @@
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.3",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -50,6 +50,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "typescript": "~4.2.4"
   }
 }
